--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ffmpeg"]
 	path = ffmpeg
 	url = git://source.ffmpeg.org/ffmpeg.git
+[submodule "movest-app/libs/ffmpeg"]
+	path = movest-app/libs/ffmpeg
+	url = git://source.ffmpeg.org/ffmpeg.git
