Revert "Enable threading support"
This reverts commit 321be4562822d3ab6d75d143538f777a90433527.

--- a/movest-app/CMakeLists.txt
+++ b/movest-app/CMakeLists.txt
@@ -33,8 +33,7 @@ ExternalProject_Add(ffmpeg_proj DEPENDS movestlib
             --enable-nonfree
             --enable-libfdk-aac
             --disable-doc
-            --disable-programs
-#            --disable-pthreads
+            --disable-pthreads
             --enable-shared
             --enable-static
             --enable-runtime-cpudetect
