--- a/movest-app/CMakeLists.txt
+++ b/movest-app/CMakeLists.txt
@@ -4,6 +4,7 @@ include(ExternalProject)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 add_executable(movest_enc src/encoder.c)
 add_executable(movest_dec src/decoder.c)
